fixed screen bleeding

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .choice {
-  width: 85%;
+  width: 90%;
   height: 70px;
   padding-bottom:10px;
   margin: 10px auto;
@@ -29,8 +29,8 @@
 }
 
 .progress-bar-container{
-  width: 85%;
-  margin: 30px auto 0 auto;
+  width: 95%;
+  margin: 20px auto 0 auto;
 }
 
 #current-word {
